--- a/styles/global.css
+++ b/styles/global.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    max-width: 48rem;
+    max-width: 60rem;
     margin: 0;
     height: 100%;
     color: #dfdfdf;
@@ -99,7 +99,7 @@ p {
 .projects-container {
     display: flex;
     flex-wrap: wrap;
-    width: 80vw;
+    justify-content: center;
 }
 
 .card {
@@ -109,17 +109,16 @@ p {
     margin: 2rem;
     margin-left: 0;
     margin-top: 0;
-    border-radius: 8px;
     height: 400px;
     width: 16rem;
-    transition: 0.5s ease;
+    transition: 0.2s ease;
 }
 
 .card:hover {
     cursor: pointer;
-    box-shadow: 6px 5px 3px 0px #0097A7;
-    transform: translateX(-6px);
-    transition: .5s ease;
+    box-shadow: -6px 6px 0px #0097A7;
+    transform: translateX(6px);
+    transition: .2s ease;
 
 }
 
