--- a/style.css
+++ b/style.css
@@ -112,6 +112,10 @@ p {
     transition: 0.2s ease;
 }
 
+.card img {
+    width: 100%;
+}
+
 .card:hover {
     cursor: pointer;
     box-shadow: -6px 6px 0px #0097A7;
@@ -145,6 +149,6 @@ p {
         margin-right: 0;
     }
     .card {
-        width: 230px;
+        width: 100%;
     }
 }
